# pandas-cli

./: .gitignore  .pre-commit-config.yaml  BUILD.md  Makefile  README.md  SEE_ALSO.md  TODO.md  dev-requirements.txt  ipython-startup  lrun.py  pd  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
contrib/: pd-thing
pandas_cli/: cmd.py  magic_buffer.py  util.py
pdc/: __init__.py  cmd.py  fname_parser.py  op.py  parser.py  ptype.py  util.py
t/: conftest.py  test_cmd.py  test_file_cache.py  test_fname_parser.py  test_op.py  test_parser.py  test_parser_misc.py  test_ptype.py  test_sls.py  test_test_bins.py  test_util_misc.py
t/asset/: fmt_test1.json  fmt_test1.tsv  fmt_test1.xlsx  t1Ct2.csv  t1Ct2Ct3.csv  t1Ct2Kvar.csv  t1Ct2KvarCt3.csv  t1Ft2.csv  t1Ft2Kvar.csv  t1TCt2.csv  t1TCt2Kvar.csv  test1.csv  test2.csv  test3.csv  test4.csv
test/: conftest.py  test_generators.py  test_magic_buffer.py  test_sls.py
