
[project]
name = "pandas-cli"
description = "I want to be able to do a bunch of pandas things without having to write a python program"
license = {text="GPL-2.0-only"}
dynamic = ["version"]
authors = [{name="Paul Miller", email="paul@merb.net" }]
maintainers = [{name="Paul Miller", email="paul@merb.net" }]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
dependencies = [
    'pandas[excel,plot,output-formatting,computation,html,xml,hdf5,aws,gcp,clipboard,compression,performance,computation]',
    'simplejson',
    'lark',
]
optional-dependencies.test = [
    "pytest",
    "pytest-cov"
]
urls.github= "https://github.com/jettero/pandas-cli.git"
scripts.pd-thing = "pdc.cmd:entry_point"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[tool]
setuptools_scm.write_to = "pdc/version.py"
setuptools.packages = ["pdc"]

[tool.pytest.ini_options]
testpaths = "t"
addopts = "--ff --show-capture=stderr --maxfail=1 --cov-report term-missing:skip-covered --no-cov-on-fail --cov-fail-under 100"
log_cli_format = "%(asctime)s %(name)17s %(levelname)5s %(message)s"
