
[metadata]
name = pandas-cli
version = attr: pandas_cli.version.VERSION
description = commandline pandas filters and file type conversions

[options]
packages = pandas_cli
install_requires = 
    click==8.1.3
    cycler==0.11.0
    fonttools==4.37.2
    kiwisolver==1.4.4
    matplotlib==3.5.3
    numpy==1.23.3
    packaging==21.3
    pandas==1.4.4
    Pillow==9.2.0
    pyparsing==3.0.9
    python-dateutil==2.8.2
    pytz==2022.2.1
    seaborn==0.12.0
    seaborn-command==0.0.4
    simplejson==3.17.6
    six==1.16.0

[options.entry_points]
console_scripts =
    pd = pandas_cli.shell:main
